<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
   >
    <data>
        <variable
            name="userProfile"
            type="app.com.patricksdeliveryboy.models.ProfileResponseModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_216"
            android:background="@drawable/nav_view_header_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="@dimen/dp_60"
            android:layout_height="@dimen/dp_60"
            android:layout_marginTop="@dimen/dp_27"
            android:src="@drawable/profile_pic"
            app:civ_border_color="#fed330"
            app:civ_border_width="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <app.com.patricksdeliveryboy.view.CustomTextView
            android:id="@+id/txt_profile_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@{userProfile.data.deliveryBoyName}"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp_18"
            app:customFontThickness="medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_image"
            android:layout_marginTop="@dimen/dp_17"
            />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_wallet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/customTextView"
            app:layout_constraintTop_toBottomOf="@+id/txt_profile_name"
            app:srcCompat="@drawable/ic_wallet"
            android:layout_marginTop="@dimen/dp_19"
            android:layout_marginEnd="@dimen/dp_8"
            />

        <app.com.patricksdeliveryboy.view.CustomTextView
            android:id="@+id/customTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rs"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toStartOf="@+id/guide_ver_50per"
            app:layout_constraintTop_toBottomOf="@+id/txt_profile_name"
            android:layout_marginTop="@dimen/dp_19"
            android:layout_marginEnd="@dimen/dp_15"
            android:textSize="@dimen/sp_14"
            app:customFontThickness="medium"
            />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_clock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/guide_ver_50per"
            app:layout_constraintTop_toBottomOf="@+id/txt_profile_name"
            app:srcCompat="@drawable/ic_clock"
            android:layout_marginTop="@dimen/dp_19"
            android:layout_marginStart="@dimen/dp_15"
            />

        <app.com.patricksdeliveryboy.view.CustomTextView
            android:id="@+id/txt_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="08:35"
            android:textColor="@color/colorWhite"
            app:layout_constraintStart_toEndOf="@+id/img_clock"
            app:layout_constraintTop_toBottomOf="@+id/txt_profile_name"
            android:layout_marginTop="@dimen/dp_19"
            android:layout_marginStart="@dimen/dp_8"
            android:textSize="@dimen/sp_14"
            app:customFontThickness="medium"
            />

        <app.com.patricksdeliveryboy.view.CustomTextView
            android:id="@+id/txt_time_subscript"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Min"
            android:textColor="@color/colorWhite"
            app:layout_constraintStart_toEndOf="@+id/txt_time"
            app:layout_constraintTop_toTopOf="@+id/txt_time"
            app:layout_constraintBottom_toBottomOf="@+id/txt_time"
            android:layout_marginStart="@dimen/dp_8"
            android:textSize="@dimen/sp_9"
            app:customFontThickness="regular"
            />

        <app.com.patricksdeliveryboy.view.CustomTextView
            android:id="@+id/txt_weekly_earnings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/weekly_earning_details"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view"
            android:textColor="@color/colorBlack"
            android:drawableStart="@drawable/ic_doller"
            android:drawablePadding="@dimen/dp_23"
            app:customFontThickness="regular"
            android:layout_marginTop="@dimen/dp_53"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/dp_20"
            android:textSize="@dimen/sp_14"
            />

        <app.com.patricksdeliveryboy.view.CustomTextView
            android:id="@+id/txt_patrick_store"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/patrick_store_live"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_weekly_earnings"
            android:textColor="@color/colorBlack"
            android:drawableStart="@drawable/ic_headphone"
            android:drawablePadding="@dimen/dp_23"
            app:customFontThickness="regular"
            android:layout_marginTop="@dimen/dp_27"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/dp_20"
            android:textSize="@dimen/sp_14"
            />

        <app.com.patricksdeliveryboy.view.CustomTextView
            android:id="@+id/txt_shift_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/shift_details"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_patrick_store"
            android:textColor="@color/colorBlack"
            android:drawableStart="@drawable/ic_page"
            android:drawablePadding="@dimen/dp_23"
            app:customFontThickness="regular"
            android:layout_marginTop="@dimen/dp_27"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/dp_20"
            android:textSize="@dimen/sp_14"
            />

        <app.com.patricksdeliveryboy.view.CustomTextView
            android:id="@+id/txt_report_issue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/report_issue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_shift_details"
            android:textColor="@color/colorBlack"
            android:drawableStart="@drawable/ic_page"
            android:drawablePadding="@dimen/dp_23"
            app:customFontThickness="regular"
            android:layout_marginTop="@dimen/dp_27"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/dp_20"
            android:textSize="@dimen/sp_14"
            />

        <app.com.patricksdeliveryboy.view.CustomTextView
            android:id="@+id/txt_end_duty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/end_duty"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_report_issue"
            android:textColor="@color/colorBlack"
            android:drawableStart="@drawable/ic_page"
            android:drawablePadding="@dimen/dp_23"
            app:customFontThickness="regular"
            android:layout_marginTop="@dimen/dp_27"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/dp_20"
            android:textSize="@dimen/sp_14"
            />

        <View
            android:layout_width="@dimen/dp_250"
            android:layout_height="@dimen/dp_2"
            android:background="#52000000"
            app:layout_constraintBottom_toTopOf="@+id/txt_logout"
            android:layout_marginBottom="@dimen/dp_23"
            app:layout_constraintStart_toStartOf="parent"
            />

        <app.com.patricksdeliveryboy.view.CustomTextView
            android:id="@+id/txt_logout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="@color/colorBlack"
            android:drawableStart="@drawable/ic_logout"
            android:drawablePadding="@dimen/dp_23"
            app:customFontThickness="regular"
            android:layout_marginTop="@dimen/dp_27"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/dp_20"
            android:textSize="@dimen/sp_14"
            android:layout_marginBottom="@dimen/dp_17"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_ver_50per"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".5"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
