<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_300">


    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/white_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/dp_35"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/header_img"
        android:layout_width="@dimen/dp_71"
        android:layout_height="@dimen/dp_71"
        android:background="@drawable/green_dot"
        android:padding="@dimen/dp_12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_shopping_bag" />

    <app.com.patricksdeliveryboy.view.CustomTextView
        android:id="@+id/txt_order_complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:text="@string/your_order_completed"
        android:textColor="@color/colorGreen1"
        android:textSize="@dimen/sp_16"
        app:customFontThickness="medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_img" />

    <app.com.patricksdeliveryboy.view.CustomTextView
        android:id="@+id/label_you_earned"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_32"
        android:text="@string/you_earned"
        android:textColor="@color/colorGrey5"
        android:textSize="@dimen/sp_13"
        app:customFontThickness="regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_order_complete" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_dollar"
        android:layout_width="@dimen/dp_43"
        android:layout_height="@dimen/dp_43"
        android:background="@drawable/blue_dot"
        android:padding="@dimen/dp_12"
        app:layout_constraintEnd_toStartOf="@+id/txt_amt"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_you_earned"
        app:srcCompat="@drawable/ic_doller_white"
        android:layout_marginEnd="@dimen/dp_4"
        android:layout_marginTop="@dimen/dp_17"
        />

    <app.com.patricksdeliveryboy.view.CustomTextView
        android:id="@+id/txt_amt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="\u20B9 25"
        android:textColor="@color/colorGreen"
        android:textSize="@dimen/sp_27"
        app:layout_constraintBottom_toBottomOf="@+id/img_dollar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/img_dollar"
        app:layout_constraintTop_toTopOf="@+id/img_dollar"
        android:layout_marginStart="@dimen/dp_4"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/but_thank"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_46"
        android:background="@drawable/accept_button_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_amt"
        android:text="@string/thank_you"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/sp_14"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginEnd="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_23"
        />


</androidx.constraintlayout.widget.ConstraintLayout>