<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pick_up_complete_bg"
    android:clickable="true"
    >

    <View
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_72"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/accept_order_top_bg"
        />

    <app.com.patricksdeliveryboy.view.CustomTextView
        android:id="@+id/txt_new_order"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/new_order_request"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/sp_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/dp_56"
        android:layout_marginTop="@dimen/dp_20"
        app:customFontThickness="regular"
        />

    <app.com.patricksdeliveryboy.view.CustomTextView
        android:id="@+id/txt_order_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="4368638 4129 "
        android:textColor="@color/colorYellow"
        android:textSize="@dimen/sp_17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_new_order"
        android:layout_marginStart="@dimen/dp_56"
        android:layout_marginTop="@dimen/dp_6"
        app:customFontThickness="medium"
        />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_pull_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_arrow_up"
        app:layout_constraintTop_toTopOf="@+id/top_view"
        app:layout_constraintBottom_toBottomOf="@+id/top_view"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/dp_38"
        />
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_red_dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/red_dot"
        app:layout_constraintTop_toTopOf="@+id/txt_delivery_place_name"
        app:layout_constraintBottom_toBottomOf="@+id/txt_delivery_place_name"
        app:layout_constraintEnd_toStartOf="@+id/txt_delivery_place_name"
        android:layout_marginEnd="@dimen/dp_12"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_drop_route"
        android:layout_width="@dimen/dp_31"
        android:layout_height="@dimen/dp_31"
        android:background="@drawable/route_circle"
        app:srcCompat="@drawable/ic_right_angle"
        android:padding="@dimen/dp_8"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/dp_21"
        app:layout_constraintTop_toTopOf="@+id/txt_delivery_place_name"
        />

    <app.com.patricksdeliveryboy.view.CustomTextView
        android:id="@+id/txt_delivery_place_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Caitlin Lambert"
        app:layout_constraintTop_toBottomOf="@+id/top_view"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/sp_13"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/dp_56"
        android:layout_marginTop="@dimen/dp_13"
        app:customFontThickness="medium"
        />

    <app.com.patricksdeliveryboy.view.CustomTextView
        android:id="@+id/txt_delivery_place_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Ladies Hostel 1 New Block, Pharmacy College Road, Government Medical College Campus, Kozhikode, Kerala 673008, India."
        app:layout_constraintTop_toBottomOf="@+id/txt_delivery_place_name"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/sp_11"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/dp_56"
        android:layout_marginTop="@dimen/dp_15"
        app:customFontThickness="regular"
        app:layout_constraintEnd_toStartOf="@+id/img_drop_route"
        android:layout_marginEnd="@dimen/dp_31"
        android:lineSpacingExtra="@dimen/dp_11"
        />

    <app.com.patricksdeliveryboy.view.CustomTextView
        android:id="@+id/txt_landmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/landmark"
        app:layout_constraintTop_toBottomOf="@+id/txt_delivery_place_location"
        android:textColor="@color/colorGreen"
        android:layout_marginStart="@dimen/dp_56"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/dp_11"
        android:textSize="@dimen/sp_9"
        app:customFontThickness="regular"
        />

    <View
        android:id="@+id/view_divide1"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_1"
        android:background="@color/colorBlack3"
        app:layout_constraintTop_toBottomOf="@+id/txt_landmark"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginStart="@dimen/dp_53"
        android:layout_marginEnd="@dimen/dp_43"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />



    <app.com.patricksdeliveryboy.view.CustomTextView
        android:id="@+id/txt_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/call"
        android:textColor="@color/colorBlue2"
        android:textSize="@dimen/sp_13"
        app:customFontThickness="medium"
        app:layout_constraintTop_toBottomOf="@+id/view_divide1"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/dp_55"
        android:layout_marginTop="@dimen/dp_7"
        android:drawableStart="@drawable/ic_phone"
        android:drawablePadding="@dimen/dp_13"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/but_reached"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/accept_button_bg"
        android:text="@string/reached"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/sp_13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_call"
        android:layout_marginStart="@dimen/dp_36"
        android:layout_marginEnd="@dimen/dp_36"
        android:layout_marginTop="@dimen/dp_17"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/dp_18"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
</layout>